kubernetes/apps/base/game-servers/vmangos/app/tcproutes.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: vmangos-auth
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wow.${CLUSTER_DOMAIN}
    external-dns.alpha.kubernetes.io/external: "true"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: vmangos-auth
  rules:
    - backendRefs:
        - name: vmangos-auth
          port: 3724
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: vmangos-world
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: vmangos-world
  rules:
    - backendRefs:
        - name: vmangos-world
          port: 8085
